adds image folder and adds logo

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" href="./favicon.ico" />
   <title>Manage Landing Page</title>
 </head>
 <body>
-  <h1 class='text-2xl'>Hello World</h1>
+  <nav class="relative container mx-3 p-6">
+  <div class="flex items-center justify-between">
+    <div class="pt2">
+      <img src="img/logo.svg" alt="logo">
+    </div>
+    
+  </div>
+  </nav>
 </body>
 </html>
