--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <div class="pt2">
       <img src="img/logo.svg" alt="logo">
     </div>
-    
+    <div class="flex space-x-6">
+      <a href="#">Pricing</a>
+      <a href="#">Product</a>
+      <a href="#">About</a>
+      <a href="#">Careers</a>
+      <a href="#">Community</a>
+    </div>
   </div>
   </nav>
 </body>
