--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <title>Manage Landing Page</title>
 </head>
 <body>
-  <nav class="relative container mx-3 p-6">
+  <nav class="relative container mx-auto p-6">
   <div class="flex items-center justify-between">
-    <div class="pt2">
-      <img src="img/logo.svg" alt="logo">
+    <div class="pt-2">
+      <img src="img/logo.svg" alt="logo" />
     </div>
-    <div class="flex space-x-6">
+    <div class="hidden md:flex space-x-6">
       <a href="#">Pricing</a>
       <a href="#">Product</a>
       <a href="#">About</a>
