adds second get started button to header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="#" class='hover:text-darkGrayishBlue'>Careers</a>
       <a href="#" class='hover:text-darkGrayishBlue'>Community</a>
     </div>
-    <a href="#" class="hidden md:block p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+    <a href="#" class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block">Get Started</a>
   </div>
   </nav>
 
@@ -35,6 +35,9 @@
         Manage makes it simple for software teams to plan day-to-day tasks
         while keeping the larger team goals in view.
       </p>
+      <div class="flex justify-center md:justify-start">
+        <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get Started</a>
+      </div>
       </div>
     </div>
   </section>
