--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
             teams.
           </p>
         </div>
+        <div class="flex flex-col space-y-8 space-w-1/2">
+          <div class="flex flex-col space-y-3 md:space-y-0 md:space-x-6 md:flex-row">
+            <div class="rounded-l-full bg-brightRedSupLight md:bg-transparent">
+              <div class="flex items-center space-x-2">
+                <div class="px-4 py-2 text-white rounded-full md:py-1 bg-brightRed">
+                  01
+                </div>
+                <h3 class="text-base font-bold md:mb-4 md:hidden">
+                  Track company wide progress
+                </h3>
+              </div>
+            </div>
+            <h3 class="hidden mb-4 text-lg font-bold md:block">
+              Track company wide progress
+            </h3>
+          </div>
+        </div>
       </div>
     </section>
   </body>
