adds testimonials section

--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
         </div>
       </div>
     </section>
+
+    <section id="testimonials">
+      <div class="max-w-6xl px5 mx-auto mt-32 text-center">
+        
+      </div>
+    </section>
   </body>
 
 </html>
