--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
 
     <section id="testimonials">
       <div class="max-w-6xl px5 mx-auto mt-32 text-center">
+        <h2 class="text-4xl font-bold text-center">
+          What's Different About Manage?
+        </h2>
         
       </div>
     </section>
