--- a/index.html
+++ b/index.html
@@ -137,7 +137,15 @@
         <h2 class="text-4xl font-bold text-center">
           What's Different About Manage?
         </h2>
-        
+        <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+          <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray w-1/3">
+            <img class='w-16 -mt-14' src="./img/avatar-anisha.png" alt="dark haired woman" />
+            <h5 class="text-lg font-bold">Anisha Li</h5>
+            <p class="text-sm text-dargGrayishBlue">“Manage has supercharged our team’s workflow. The ability to
+              maintain visibility on larger milestones at all times keeps
+              everyone motivated.”</p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
