--- a/index.html
+++ b/index.html
@@ -138,10 +138,28 @@
           What's Different About Manage?
         </h2>
         <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
-          <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray w-1/3">
+          <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
             <img class='w-16 -mt-14' src="./img/avatar-anisha.png" alt="dark haired woman" />
             <h5 class="text-lg font-bold">Anisha Li</h5>
-            <p class="text-sm text-dargGrayishBlue">“Manage has supercharged our team’s workflow. The ability to
+            <p class="text-sm text-darkGrayishBlue">“Manage has supercharged our team’s workflow. The ability to
+              maintain visibility on larger milestones at all times keeps
+              everyone motivated.”</p>
+          </div>
+        </div>
+        <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+          <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+            <img class='w-16 -mt-14' src="./img/avatar-ali.png" alt="dark haired woman" />
+            <h5 class="text-lg font-bold">Ali Bravo</h5>
+            <p class="text-sm text-darkGrayishBlue">“We have been able to cancel so many other subscriptions since
+              using Manage. There is no more cross-channel confusion and
+              everyone is much more focused.”</p>
+          </div>
+        </div>
+        <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
+          <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
+            <img class='w-16 -mt-14' src="./img/avatar-richard.png" alt="dark haired woman" />
+            <h5 class="text-lg font-bold">Richard Watts</h5>
+            <p class="text-sm text-darkGrayishBlue">“Manage has supercharged our team’s workflow. The ability to
               maintain visibility on larger milestones at all times keeps
               everyone motivated.”</p>
           </div>
