--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
         </div>
       </div>
     </section>
+    <div class="section bg-brightRed" id="cta">
+      <div class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:p-y-12 md:flex-row md:space-y-0">
+        <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">Simplify how your team works today</h2>
+
+      </div>
+    </div>
   </body>
 
 </html>
