--- a/index.html
+++ b/index.html
@@ -161,16 +161,20 @@
           </div>
         </div>
         <div class="my-16">
-          <a href="#"
-          class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get
-          Started</a>
+          <a href="#" class="p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight">Get
+            Started</a>
         </div>
       </div>
     </section>
     <div class="section bg-brightRed" id="cta">
-      <div class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:p-y-12 md:flex-row md:space-y-0">
-        <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">Simplify how your team works today</h2>
-
+      <div
+        class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:p-y-12 md:flex-row md:space-y-0">
+        <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
+          Simplify how your team works today</h2>
+        <div>
+          <a href="#" class="p-3 px-6 pt-2 bg-white text-brightRed rounded-full shadow-2xl baseline hover:bg-gray-900">Get
+            Started</a>
+        </div>
       </div>
     </div>
   </body>
