--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
       </div>
     </section>
-    <div class="section bg-brightRed" id="cta">
+    <section class="bg-brightRed" id="cta">
       <div
         class="container flex flex-col items-center justify-between px-6 py-24 mx-auto space-y-12 md:p-y-12 md:flex-row md:space-y-0">
         <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
@@ -176,7 +176,19 @@
             Started</a>
         </div>
       </div>
-    </div>
+    </section>
+    <footer class="bg-veryDarkBlue">
+      <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0">
+        <div class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
+          <div>
+            <img src="img/logo-white.svg" class='h-8' alt="logo">
+          </div>
+          <div class="flex justify-center space-x-4">
+            
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 
 </html>
