--- a/index.html
+++ b/index.html
@@ -184,7 +184,21 @@
             <img src="img/logo-white.svg" class='h-8' alt="logo">
           </div>
           <div class="flex justify-center space-x-4">
-            
+            <a href="#">
+              <img src="img/icon-facebook.svg" alt="" class="h-8">
+            </a>
+            <a href="#">
+              <img src="img/icon-youtube.svg" alt="" class="h-8">
+            </a>
+            <a href="#">
+              <img src="img/icon-twitter.svg" alt="" class="h-8">
+            </a>
+            <a href="#">
+              <img src="img/icon-pinterest.svg" alt="" class="h-8">
+            </a>
+            <a href="#">
+              <img src="img/icon-in" alt="" class="h-8">
+            </a>
           </div>
         </div>
       </div>
