--- a/index.html
+++ b/index.html
@@ -197,8 +197,21 @@
               <img src="img/icon-pinterest.svg" alt="" class="h-8">
             </a>
             <a href="#">
-              <img src="img/icon-in" alt="" class="h-8">
+              <img src="img/icon-instagram" alt="" class="h-8">
             </a>
+          </div>
+        </div>
+        <div class="flex justify-around space-x-32">
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="#" class="hover:text-brightRed">Home</a>
+            <a href="#" class="hover:text-brightRed">Pricing</a>
+            <a href="#" class="hover:text-brightRed">Products</a>
+            <a href="#" class="hover:text-brightRed">About</a>
+          </div>
+          <div class="flex flex-col space-y-3 text-white">
+            <a href="#" class="hover:text-brightRed">Careers</a>
+            <a href="#" class="hover:text-brightRed">Community</a>
+            <a href="#" class="hover:text-brightRed">Privacy Policy</a>
           </div>
         </div>
       </div>
