--- a/index.html
+++ b/index.html
@@ -172,14 +172,17 @@
         <h2 class="text-5xl font-bold leading-tight text-center text-white md:text-4xl md:max-w-xl md:text-left">
           Simplify how your team works today</h2>
         <div>
-          <a href="#" class="p-3 px-6 pt-2 bg-white text-brightRed rounded-full shadow-2xl baseline hover:bg-gray-900">Get
+          <a href="#"
+            class="p-3 px-6 pt-2 bg-white text-brightRed rounded-full shadow-2xl baseline hover:bg-gray-900">Get
             Started</a>
         </div>
       </div>
     </section>
     <footer class="bg-veryDarkBlue">
-      <div class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0">
-        <div class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
+      <div
+        class="container flex flex-col-reverse justify-between px-6 py-10 mx-auto space-y-8 md:flex-row md:space-y-0">
+        <div
+          class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
           <div>
             <img src="img/logo-white.svg" class='h-8' alt="logo">
           </div>
@@ -213,6 +216,12 @@
             <a href="#" class="hover:text-brightRed">Community</a>
             <a href="#" class="hover:text-brightRed">Privacy Policy</a>
           </div>
+        </div>
+        <div class="flex flex-col justify-between">
+          <form class='flex space-x-3'>
+            <input type="text" class="flex-1 px-4 rounded-full focus:outline-none" placeholder='Updated in your inbox' />
+            <button class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none">Go</button>
+          </form>
         </div>
       </div>
     </footer>
