--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
             <input type="text" class="flex-1 px-4 rounded-full focus:outline-none" placeholder='Updated in your inbox' />
             <button class="px-6 py-2 text-white rounded-full bg-brightRed hover:bg-brightRedLight focus:outline-none">Go</button>
           </form>
+          <div class="hidden text-white md:block">Copyright &copy; 2022 All Rights Reserved</div>
         </div>
       </div>
     </footer>
