--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
         <div
           class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:space-y-0 md:items-start">
           <div>
+            <div class="mx-auto my-6 text-center text-white md:hidden">
+              Copyright &copy; 2022 All Rights Reserved
+            </div>
             <img src="img/logo-white.svg" class='h-8' alt="logo">
           </div>
           <div class="flex justify-center space-x-4">
