--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
           </button>
       </div>
 
-      
+      <div class="md:hidden">
+        <div id="menu" class="absolute flex flex-col items-center self-end hidden py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+          <a href="#">Pricing</a>
+          <a href="#">Product</a>
+          <a href="#">About Us</a>
+          <a href="#">Careers</a>
+          <a href="#">Community</a>
+        </div>
+      </div>
     </nav>
 
     <section id="hero">
