--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#"
           class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block">Get
           Started</a>
-          <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
+          <button id="menu-btn" class="open block hamburger md:hidden focus:outline-none">
             <span class="hamburger-top"></span>
             <span class="hamburger-middle"></span>
             <span class="hamburger-bottom"></span>
