--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#"
           class="hidden p-3 px-6 pt-2 text-white bg-brightRed rounded-full baseline hover:bg-brightRedLight md:block">Get
           Started</a>
-          <button id="menu-btn" class="open block hamburger md:hidden focus:outline-none">
+          <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
             <span class="hamburger-top"></span>
             <span class="hamburger-middle"></span>
             <span class="hamburger-bottom"></span>
@@ -34,7 +34,7 @@
       </div>
 
       <div class="md:hidden">
-        <div id="menu" class="absolute flex flex-col items-center self-end hidden py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+        <div id="menu" class="absolute flex-col items-center self-end hidden py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
           <a href="#">Pricing</a>
           <a href="#">Product</a>
           <a href="#">About Us</a>
@@ -244,6 +244,7 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 
 </html>
